--- a/katatest.htm
+++ b/katatest.htm
@@ -98,8 +98,23 @@ if (chosen == 0 && i<w.length) {
 	
 	
 	setit();}
+var kanj=['あ','い','う','え','お',
+'か','き','く','け','こ','きゃ','きゅ','きょ',
+'さ','し','す','せ','そ','しゃ','しゅ','しょ',
+'た','ち','つ','て','と','ちゃ','ちゅ','ちょ',
+'な','に','ぬ','ね','の','にゃ','にゅ','にょ',
+'は','ひ','ふ','へ','ほ','ひゃ','ひゅ','ひょ',
+'ま','み','む','め','も','みゃ','みゅ','みょ',
+'や','ゆ','よ',
+'ら','り','る','れ','ろ','りゃ','りゅ','りょ',
+'わ','を','ん',
+'が','ぎ','ぐ','げ','ご','ぎゃ','ぎゅ','ぎょ',
+'ざ','じ','ず','ぜ','ぞ','じゃ','じゅ','じょ',
+'だ','ぢ','づ','で','ど',
+'ば','び','ぶ','べ','ぼ','びゃ','びゅ','びょ',
+'ぱ','ぴ','ぷ','ぺ','ぽ','ぴゃ','ぴゅ','ぴょ'];
 
-var kanj=['ア','イ','ウ','エ','オ',
+var kkanj=['ア','イ','ウ','エ','オ',
 'カ','キ','ク','ケ','コ','キャ','キュ','キョ',
 'サ','シ','ス','セ','ソ','シャ','シュ','ショ',
 'タ','チ','ツ','テ','ト','チャ','チュ','チョ',
@@ -127,10 +142,9 @@ var desu=['ａ','ｉ','ｕ','ｅ','ｏ',
 'ｗａ','（ｗ）ｏ','ｎ',
 'ｇａ','ｇｉ','ｇｕ','ｇｅ','ｇｏ','ｇｙａ','ｇｙｕ','ｇｙｏ',
 'ｚａ','ｊｉ','ｚｕ','ｚｅ','ｚｏ','ｊａ','ｊｕ','ｊｏ',
-'ｄａ','ｊｉ','ｚｕ','ｄｅ','ｄｏ','ｊａ','ｊｕ','ｊｏ',
+'ｄａ','ｊｉ','ｚｕ','ｄｅ','ｄｏ',
 'ｂａ','ｂｉ','ｂｕ','ｂｅ','ｂｏ','ｂｙａ','ｂｙｕ','ｂｙｏ',
-'ｐａ','ｐｉ','ｐｕ','ｐｅ','ｐｏ','ｐｙａ','ｐｙｕ','ｐｙｏ',
-'ｗｉ','ｗｅ','ｗｏ','ｖａ','ｖｉ','ｖｕ','ｖｅ','ｖｏ','ｆａ','ｆｉ','ｆｅ','ｆｏ','ｔｉ','ｔｕ','ｄｉ','ｄｕ','ｃｈｅ','ｓｈｅ','ｊｅ','（ｃｈｕｏｎ）','（ｓｏｋｕｏｎ）']; 
+'ｐａ','ｐｉ','ｐｕ','ｐｅ','ｐｏ','ｐｙａ','ｐｙｕ','ｐｙｏ']; 
 var janai=['ａ','ｉ','ｕ','ｅ','ｏ',
 'ｋａ','ｋｉ','ｋｕ','ｋｅ','ｋｏ','ｋｙａ','ｋｙｕ','ｋｙｏ',
 'ｓａ','ｓｈｉ','ｓｕ','ｓｅ','ｓｏ','ｓｈａ','ｓｈｕ','ｓｈｏ',
