--- a/katatest.htm
+++ b/katatest.htm
@@ -5,9 +5,9 @@
 <meta charset="utf-8"/>
 		
 <style type="text/css">
-body{background-color: #f0f0f0; color: #303030; text-transform: uppercase; text-align: center; transition: all 0.5s}
+body{background-color: #9f8df7; color: #ffffff; text-transform: uppercase; text-align: center; transition: all 0.5s}
 body.green{color: #6ecf27}
-body.red{color: #f41c27}
+body.red{color: #5862ce}
 .tails{display:none !important}
 </style>
 </head>
