--- a/katatest.htm
+++ b/katatest.htm
@@ -6,8 +6,8 @@
 		
 <style type="text/css">
 body{background-color: #9f8df7; color: #ffffff; text-transform: uppercase; text-align: center; transition: all 0.5s}
-body.green{color: #6ecf27}
-body.red{color: #5862ce}
+body.green{color: #68e1f1}
+body.red{color: #baa2ec}
 .tails{display:none !important}
 </style>
 </head>
@@ -48,7 +48,8 @@ function setit(){
 				document.getElementById('kanj').textContent = kanj[current];
 				shuffle(tails); 
 				document.getElementById(tails[0]).textContent = desu[current];
-				document.getElementById(tails[1]).textContent = janai[current]; console.log('Styles for step '+i+' are set'); kickit()
+				document.getElementById(tails[1]).textContent = janai[current]; 
+				console.log('Styles for step '+i+' are set'); kickit()
 			}
 		});
 	}
@@ -193,7 +194,14 @@ var janai=['ａ','ｉ','ｕ','ｅ','ｏ',
 'ｄａ','ｊｉ','ｚｕ','ｄｅ','ｄｏ',
 'ｂａ','ｂｉ','ｂｕ','ｂｅ','ｂｏ','ｂｙａ','ｂｙｕ','ｂｙｏ',
 'ｐａ','ｐｉ','ｐｕ','ｐｅ','ｐｏ','ｐｙａ','ｐｙｕ','ｐｙｏ']; 
-var w=[0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127]; shuffle(w); var i = 0; var tumblr = -1; var right = 0; var chosen = 1; var current; var tails=[0,1];
+var w=[0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103];
+shuffle(w);
+var i = 0; 
+var tumblr = -1; 
+var right = 0; 
+var chosen = 1; 
+var current; 
+var tails=[0,1];
 
 setit();
 	
